--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "esm": "^3.2.25"
+    "@types/express": "^4.17.11",
+    "esm": "^3.2.25",
+    "express": "^4.17.1"
   }
 }
