--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,12 +4,12 @@ WORKDIR /usr/src/app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./
+COPY /app/package*.json ./
 RUN yarn install
 # If you are building your code for production
 # RUN npm ci --only=production
 # Bundle app source
-COPY . .
+COPY /app/. .
 RUN yarn tsc
 
 
