--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ version: "3"
 services:
   mysqldb:
     image: mysql
+    command: 
+      - '--secure-file-priv=NULL'
     restart: always
     env_file: ./.env
     environment:
@@ -11,9 +13,10 @@ services:
     ports:
       - $MYSQL_LOCAL_PORT:$MYSQL_DOCKER_PORT
     volumes:
-      - db-config:/etc/mysql
-      - db-data:/var/lib/mysql
-      - ./db/backup/files/:/data_backup/data
+      - ./data/etc/mysql/:/etc/mysql:rw
+      - ./data/var/lib/mysql:/var/lib/mysql:rw
+      - ./data/db/backup/files/:/data_backup/data:rw
+      - ./schema:/docker-entrypoint-initdb.d:ro
   app:
     build:
       context: .
