--- a/app/package.json
+++ b/app/package.json
@@ -15,15 +15,16 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.35",
+    "@types/validator": "^13.1.3",
     "eslint": "^7.21.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/sequelize": "^4.28.9",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
