--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:15
 # Create app directory
 WORKDIR /usr/src/app
+# ENV
+ENV NODE_ENV production
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
