--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.1"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.5.1",
+    "sequelize-typescript": "^2.1.0"
   }
 }
