--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "ENV_FILE=../.env jest"
   },
   "repository": "git@github.com:OKO-press/node-typescript-template.git",
   "author": "Konrad Fedorczyk <fedek6@gmail.com>",
@@ -16,12 +17,14 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.2"
   },
   "dependencies": {
