--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,7 @@
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:unit": "ENV_FILE=../.env jest"
+    "test": "ENV_FILE=../.env jest"
   },
   "repository": "git@github.com:OKO-press/node-typescript-template.git",
   "author": "Konrad Fedorczyk <fedek6@gmail.com>",
@@ -23,9 +22,10 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
