--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,11 @@
     "sourceMap": true,
     "outDir": "dist",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "baseUrl": ".",
+    "paths": {
+      "@App/*": ["src/*"]
+    }
   },
   "lib": ["es2015"]
 }
