--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+MYSQL_USERNAME=root
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=example_db
+MYSQL_DATABASE=score_api
 MYSQL_LOCAL_PORT=3306
 MYSQL_DOCKER_PORT=3306
 
