--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "test": "ENV_FILE=../.env jest"
+    "test": "jest"
   },
   "repository": "git@github.com:OKO-press/node-typescript-template.git",
   "author": "Konrad Fedorczyk <fedek6@gmail.com>",
