--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
@@ -30,12 +31,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.5.1",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-typescript": "^2.1.0",
+    "unique-names-generator": "^4.4.0"
   }
 }
